--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
+    "react-redux-firebase": "^3.1.1",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
